WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89026
[Qt][WK2] ASSERT(m_rawAttributes.initialScale > 0) in QtViewportHandler::initialRect()
https://bugs.webkit.org/show_bug.cgi?id=89026
Summary
[Qt][WK2] ASSERT(m_rawAttributes.initialScale > 0) in QtViewportHandler::init...
Andras Becsi
Reported
2012-06-13 11:39:37 PDT
[Qt][WK2] ASSERT(m_rawAttributes.initialScale > 0) in QtViewportHandler::initialRect()
Attachments
Patch
(1.85 KB, patch)
2012-06-13 11:43 PDT
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2012-06-13 11:43:00 PDT
Created
attachment 147376
[details]
Patch
Csaba Osztrogonác
Comment 2
2012-06-13 11:59:46 PDT
Comment on
attachment 147376
[details]
Patch r=me
Andras Becsi
Comment 3
2012-06-13 12:09:31 PDT
Comment on
attachment 147376
[details]
Patch Clearing flags on attachment: 147376 Committed
r120233
: <
http://trac.webkit.org/changeset/120233
>
Andras Becsi
Comment 4
2012-06-13 12:09:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug