[Qt][WK2] ASSERT(m_rawAttributes.initialScale > 0) in QtViewportHandler::initialRect() https://bugs.webkit.org/show_bug.cgi?id=89026

Reviewed by Csaba Osztrogonác.

Only act on viewport attribute changes if the layout size is valid.

* UIProcess/qt/QtViewportHandler.cpp:
(WebKit::QtViewportHandler::setInitialScaleIfNeeded):
(WebKit::QtViewportHandler::viewportAttributesChanged):

Canonical link: https://commits.webkit.org/106853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120233 268f45cc-cd09-0410-ab3c-d52691b4dbfc